--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,18 +2,23 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
+        android:id="@+id/navigation_classes"
+        android:icon="@drawable/ic_classes"
+        android:title="@string/title_classes" />
 
     <item
-        android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:id="@+id/navigation_races"
+        android:icon="@drawable/ic_races"
+        android:title="@string/title_races" />
 
     <item
-        android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:id="@+id/navigation_weapons"
+        android:icon="@drawable/ic_weapons"
+        android:title="@string/title_weapons" />
+
+    <item
+        android:id="@+id/navigation_bestiary"
+        android:icon="@drawable/ic_bestiary"
+        android:title="@string/title_bestiary" />
 
 </menu>
