--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,16 +1,16 @@
 <resources>
     <!-- Base application theme. -->
     <style name="Theme.Beholder" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
+        <item name="backgroundColor">#F5E1C0</item>
+        <item name="colorPrimary">#C97A3D</item>
+        <item name="colorPrimaryDark">#8C6F47</item>
+        <item name="colorAccent">#C97A3D</item>
+        <item name="colorOnBackground">#4B3C31</item>
+        <item name="colorOnSecondary">#7C6B57</item>
+        <item name="colorSecondary">#F5D8A3</item>
+        <item name="colorTertiary">#C1B39B</item>
+        <item name="colorError">#D25D5D</item>
+        <item name="colorControlActivated">#A4D68D</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
 </resources>
