--- a/app/src/main/res/layout/fragment_item_selection.xml
+++ b/app/src/main/res/layout/fragment_item_selection.xml
@@ -7,7 +7,7 @@
     android:fitsSystemWindows="true">
 
     <TextView
-        android:id="@+id/classTitle"
+        android:id="@+id/itemTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="@font/font_body"
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/classRecyclerView"
+        android:id="@+id/itemsRecyclerView"
         android:layout_width="@dimen/_0dp"
         android:layout_height="@dimen/_0dp"
         android:layout_marginBottom="?attr/actionBarSize"
@@ -28,6 +28,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/classTitle" />
+        app:layout_constraintTop_toBottomOf="@id/itemTitle" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
