--- a/app/src/main/res/layout/fragment_race_details.xml
+++ b/app/src/main/res/layout/fragment_race_details.xml
@@ -2,21 +2,22 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.ui.NotificationsFragment">
+    android:background="?attr/backgroundColor"
+    android:fitsSystemWindows="true">
 
-    <TextView
-        android:id="@+id/text_notifications"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/_8dp"
-        android:layout_marginTop="@dimen/_8dp"
-        android:layout_marginEnd="@dimen/_8dp"
-        android:textAlignment="center"
-        android:textSize="@dimen/_20sp"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/raceDetailsRecyclerView"
+        android:layout_width="@dimen/_0dp"
+        android:layout_height="@dimen/_0dp"
+        android:layout_marginBottom="?attr/actionBarSize"
+        android:padding="@dimen/_16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:listitem="@layout/item_class_detail_collapsible_text" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
