--- a/app/src/main/res/layout/table_row.xml
+++ b/app/src/main/res/layout/table_row.xml
@@ -2,24 +2,24 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="8dp">
+    android:padding="@dimen/_8dp">
 
     <TextView
         android:id="@+id/level"
-        android:layout_width="0dp"
+        android:layout_width="@dimen/_0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/features"
-        android:layout_width="0dp"
+        android:layout_width="@dimen/_0dp"
         android:layout_height="wrap_content"
         android:layout_weight="2" />
 
     <TextView
         android:id="@+id/spellSlots"
-        android:layout_width="0dp"
+        android:layout_width="@dimen/_0dp"
         android:layout_height="wrap_content"
         android:layout_weight="2" />
 </LinearLayout>
