--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -20,6 +20,25 @@
     </fragment>
 
     <fragment
+        android:id="@+id/navigation_races"
+        android:name="com.evermore.beholder.presentation.ui.RaceSelectionFragment"
+        android:label="Select Race">
+
+        <action
+            android:id="@+id/action_raceSelection_to_classDetail"
+            app:destination="@id/raceDetailFragment">
+            <argument
+                android:name="index"
+                app:argType="string" />
+        </action>
+    </fragment>
+
+    <fragment
+        android:id="@+id/raceDetailFragment"
+        android:name="com.evermore.beholder.presentation.ui.RaceDetailsFragment"
+        android:label="Race details" />
+
+    <fragment
         android:id="@+id/classDetailFragment"
         android:name="com.evermore.beholder.presentation.ui.ClassDetailsFragment"
         android:label="Class details"
