--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,4 +12,11 @@
     <dimen name="_0dp">0dp</dimen>
     <dimen name="_24sp">24sp</dimen>
     <dimen name="_20dp">20dp</dimen>
+    <dimen name="_16sp">16sp</dimen>
+    <dimen name="_20sp">20sp</dimen>
+    <dimen name="_40dp">40dp</dimen>
+    <dimen name="_4dp">4dp</dimen>
+    <dimen name="_10dp">10dp</dimen>
+    <dimen name="_2dp">2dp</dimen>
+    <dimen name="_14sp">14sp</dimen>
 </resources>
