--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -19,4 +19,5 @@
     <dimen name="_10dp">10dp</dimen>
     <dimen name="_2dp">2dp</dimen>
     <dimen name="_14sp">14sp</dimen>
+    <dimen name="_1dp">1dp</dimen>
 </resources>
