Создание интерфейса для работы с АПИ + зависимости + внедрение работы с сетью в фрагмент с классами

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -52,7 +52,11 @@
         android:id="@+id/classDetailFragment"
         android:name="com.evermore.beholder.presentation.ui.ClassDetailsFragment"
         android:label="Class details"
-        tools:layout="@layout/fragment_class_details" />
+        tools:layout="@layout/fragment_class_details">
+        <argument
+            android:name="index"
+            app:argType="string" />
+    </fragment>
 
     <fragment
         android:id="@+id/raceDetailFragment"
