--- a/app/src/main/res/layout/fragment_class_details.xml
+++ b/app/src/main/res/layout/fragment_class_details.xml
@@ -18,4 +18,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <include
+        android:id="@+id/skeletonLayout"
+        layout="@layout/item_details_skeleton"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone" />
 </androidx.constraintlayout.widget.ConstraintLayout>
