--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -20,4 +20,8 @@
     <dimen name="_2dp">2dp</dimen>
     <dimen name="_14sp">14sp</dimen>
     <dimen name="_1dp">1dp</dimen>
+    <dimen name="_24dp">24dp</dimen>
+    <dimen name="_150dp">150dp</dimen>
+    <dimen name="_250dp">250dp</dimen>
+    <dimen name="_100dp">100dp</dimen>
 </resources>
